# PBS_auto

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
context4agent/: architecture.md  modules.md  queue-validation.md  state-machine.md  testing.md
docs/: usage.md
examples/: config.toml
requirements/: PBS.md  queue_specs.md  requirments.md  successfully_submitted.md
requirements/scripts_template/server1/: abcluster_geom.sh  cp2k.2023.2.sh  cp2k.6.1.sh  cp2k.7.1.sh  g16.sh  gromacs.sh  molpro.sh  orca_421.sh  orca_601.sh  tgmin.sh  vasp544.sh  vasp643.sh  vasp_NBO.sh  vasp_SSAd.sh
requirements/scripts_template/server2/: cp2k.2023.2.sh  cp2k.7.1.sh  vasp.630.sh  vasp544-nbo.sh  vaspsol544-vtst.sh  vaspsol544.sh  vaspsol630-vtst.sh  vaspvtst.630.sh  vaspvtst.643.sh
requirements/wordir_example/1/: cmd.inp  init.xyz
requirements/wordir_example/10/: cmd.inp  init.xyz
requirements/wordir_example/2/: cmd.inp  init.xyz
requirements/wordir_example/3/: cmd.inp  init.xyz
requirements/wordir_example/4/: cmd.inp  init.xyz
requirements/wordir_example/5/: cmd.inp  init.xyz
requirements/wordir_example/6/: cmd.inp  init.xyz
requirements/wordir_example/7/: cmd.inp  init.xyz
src/pbs_auto/: __init__.py  __main__.py  cli.py  config.py  daemon.py  display.py  models.py  pbs.py  queue.py  scanner.py  scheduler.py  state.py
src/pbs_auto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_batch_store.py  test_config.py  test_pbs.py  test_queue.py  test_scanner.py  test_scheduler.py  test_state.py
(+10 files in other folders)
