[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pbs-auto"
version = "0.1.0"
description = "Bulk PBS job submission and monitoring tool"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "tomli>=2.0",
]

[project.scripts]
pbs-auto = "pbs_auto.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
